--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "astro": "^4.0.4",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
