--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "strictNullChecks": true
-  }
+    "baseUrl": ".",
+    "strictNullChecks": true,
+    "paths": {
+      "@/utils": [
+        "src/utils/index.ts"
+      ]
+    }
+  },
+  "include": [
+    "src",
+    "*.ts"
+  ]
 }
