--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,15 @@
     "baseUrl": ".",
     "strictNullChecks": true,
     "paths": {
-      "@/utils": ["src/utils/index.ts"],
-      "@/components/*": ["src/components/*.astro"],
-      "@/layouts/*": ["src/layouts/*.astro"]
+      "@/utils": [
+        "src/utils/index.ts"
+      ],
+      "@/components/*": [
+        "src/components/*.astro"
+      ],
+      "@/layouts/*": [
+        "src/layouts/*.astro"
+      ]
     }
   },
   "include": [
