--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
       ],
       "@/layouts/*": [
         "src/layouts/*.astro"
+      ],
+      "@/i18n/*": [
+        "src/i18n/*.ts"
       ]
     }
   },
