--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
       ],
       "@/i18n/*": [
         "src/i18n/*.ts"
-      ]
+      ],
+      "@/styles/*": [
+        "src/styles/*.css"
+      ],
     }
   },
   "include": [
