--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "postbuild": "pagefind --site dist && cp -r dist/pagefind public/",
     "astro": "astro"
   },
   "dependencies": {
@@ -23,6 +24,8 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@pagefind/default-ui": "^1.3.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "pagefind": "^1.3.0"
   }
 }
