configure import path for styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
       ],
       "@/layouts/*": [
         "src/layouts/*.astro"
+      ],
+      "@/styles/*": [
+        "src/styles/*.css"
       ]
     }
   },
